# application-pipeline

./: .gitignore  .opencode.md  2026-04-18-073400-local-command-caveatcaveat-the-messages-below.txt  2026-04-18-073455-local-command-caveatcaveat-the-messages-below.txt  AGENTS.md  CLAUDE.md  CODEX.md  GEMINI.md  IMPLEMENTATION_CHECKLIST.md  Makefile  PHASES_COMPLETE.md  README.md  SUBMISSION-GUIDE.md  absolute_repair_irf.py  attack-order-2026-04-13.md  check_ccb0fd2.py  fix_yaml_dupes.py  follow-up-actions-2026-04-03.md  follow-up-actions-2026-04-13.md  follow-up-actions-2026-04-15.md  pyproject.toml  repair_irf_atomic.py  repair_irf_final.py  repair_irf_safe.py  repair_irf_surgical.py  repair_irf_ultra_safe.py  repair_irf_v2.py  repair_irf_v3.py  repair_irf_v4.py  scripts_list.txt  seed.yaml  strategia--ergon.md  tests_list.txt  update_irf.py  update_priority_table.py
.config/: metrics.yaml
.githooks/: pre-push
.github/: AGENTS.md  GEMINI.md  SECURITY.md
blocks/: README.md  _index.yaml  cathedral.md
config/: identity.yaml  metrics.yaml
docs/: SOP-application-genesis.md  agent-rules.md  architecture.md  eruptio-execution-guide.md  github-sponsors-tiers.md  handoff-protocol.md  secrets-management.md  sop--atomic-clock.md  sop--diagnostic-inter-rater-agreement.md  sop--execution-sequence.md  sop--multi-agent-dispatch.md  sop--session-handoff-avalanche.md  sop--system-loops.md  submission-guide.md  system-standards.md  verification-blueprint.md  workflow.md
launchd/: README.md  com.4jp.pipeline.agent-biweekly.plist  com.4jp.pipeline.agent-daily.plist  com.4jp.pipeline.calendar-refresh.plist  com.4jp.pipeline.daily-deferred.plist  com.4jp.pipeline.daily-intake-triage.plist  com.4jp.pipeline.daily-scan.plist  com.4jp.pipeline.weekly-backup.plist
pipeline/: INDEX.md  _schema.yaml
ratings/: consensus-2026-03-14.json  objective.json  qa-lead.json  rater1.json  rater2.json
scripts/: advance.py  agent.py  alchemize.py  answer_questions.py  apply.py  apply_engine.py  archive_research.py  ashby_submit.py  ats_base.py  ats_verification.py  audit_system.py  backfill_dates.py  cli.py  (+157 more)
(+9112 files in other folders)
